--- a/individual-work/second-website/style.css
+++ b/individual-work/second-website/style.css
@@ -24,7 +24,10 @@ body {
     /* background-image: linear-gradient(90deg, rgba(155, 153, 153, 0.3)1px, transparent 0), linear-gradient(rgba(155, 153, 153, 0.3) 1px, transparent 0);
     background-size: 10px 10px; */
 }
-
+header{
+    position: fixed;
+    z-index: 99;
+}
 .nav-bar-main {
     /* background-color: rgba(199, 194, 188, 0.205); */
     display: flex;
