--- a/individual-work/second-website/style.css
+++ b/individual-work/second-website/style.css
@@ -33,6 +33,7 @@ body {
 }
 
 .nav-bar-sub-main {
+    width: max-content;
     position: relative;
     z-index: 8;
     display: flex;
@@ -365,3 +366,216 @@ body {
     }
 
 } */
+@media only screen and (min-device-width: 375px) and (max-device-width: 667px) and (orientation: portrait){
+    body{
+    }
+    .nav-bar-main {
+        display: flex;
+        justify-content: center;
+        position: relative;
+        z-index: 5;
+    }
+    
+    .nav-bar-sub-main {
+        position: relative;
+        z-index: 8;
+        display: flex;
+        justify-content: space-evenly;
+        padding: 1%;
+        background-color: rgba(0, 245, 90, 0);
+    }
+    
+    .line-divider-main {
+        z-index: 5;
+        position: relative;
+        display: flex;
+        justify-content: center;
+    }
+    
+    .line-divider {
+        width: 60vw;
+        border-radius: none;
+        box-shadow: 0px 15px 12px -10px rgba(0, 0, 0, 0.58);
+        border-bottom: black 1px solid;
+        margin: -3vh 0vw 0vh 0vw;
+    }   
+    
+    .nav-bar-sub-main button {
+        scale: .7;
+        text-decoration: none;
+        font-size: 1.3rem;
+        padding-top: .5vh;
+        padding-right: .9vh;
+        padding-bottom: .5vh;
+        padding-left: .9vh;
+        width: fit-content;
+        height: auto;
+        cursor: pointer;
+        position: relative;
+        transition-duration: 0.4s;
+        text-align: center;
+        display: inline-flex;
+        color: rgb(4, 4, 4);
+        background-color: rgba(0, 0, 0, 0);
+        border: rgb(4, 4, 4);
+    }
+    
+    .nav-bar-sub-main button::after {
+        content: "";
+        width: 11px;
+        height: 11px;
+        position: absolute;
+        transition: 0.4s;
+        cursor: pointer;
+    }
+    
+    .nav-bar-sub-main button::before {
+        content: "";
+        width: 11px;
+        height: 11px;
+        position: absolute;
+        transition: 0.4s;
+        cursor: pointer;
+    }
+    
+    .nav-bar-sub-main button::after {
+        top: -1px;
+        left: -1px;
+        border-top: rgb(4, 4, 4) 2px solid;
+        border-left: rgb(4, 4, 4) 2px solid;
+        cursor: pointer;
+    }
+    
+    .nav-bar-sub-main button::before {
+        bottom: -1px;
+        right: -1px;
+        border-bottom: rgb(4, 4, 4) 2px solid;
+        border-right: rgb(4, 4, 4) 2px solid;
+        cursor: pointer;
+    }
+    
+    .nav-bar-sub-main button:hover::before {
+        width: 110%;
+        height: 125%;
+        cursor: pointer;
+    }
+    
+    .nav-bar-sub-main button:hover::after {
+        width: 110%;
+        height: 125%;
+        cursor: pointer;
+    }
+    
+    .nav-bar-sub-main button:hover {
+        box-shadow: 0px 0px 25px 20px rgba(0, 0, 0, 0.1);
+    }
+    .content-main {
+        position: relative;
+        margin: 0vh 5vw 0vh 5vw;
+        height: auto;
+        z-index: 1;
+    }
+    
+    .content-sub-main img {
+        border-radius: 2px;
+        border-radius: none;
+        scale: .8;
+        width: auto;
+        height: auto;
+        box-shadow: 0px 10px 25px 0px rgb(121, 119, 119, 0.7);
+    }
+    
+    .content-sub-main {
+        /* gap: 5%;
+        place-self: stretch/center;
+        grid-template: 1fr 1fr/ 1fr 1fr 1fr;
+        gap: 5% 15%; */
+        /* grid-template-columns: 400px 400px;
+        grid-template-rows: 400px 400px;
+        justify-content: space-around;
+        align-items: space-around; */
+        margin-top: 4vh;
+        margin-bottom: 10vh;
+        display: grid;
+        align-items: center;
+        justify-items: center;
+        gap: 2% 2%;
+        grid-template-areas:
+            "A A A A"
+            "B B B B"
+            "C C C C" 
+            "D D D D"
+            "E E E E"
+            "F F F F"
+            "G G G G";
+    }
+    
+    .box-1 {
+        grid-area: A;
+    }
+    
+    .box-2 {
+        grid-area: B;
+    }
+    
+    .box-3 {
+        grid-area: C;
+        width: 90vw;
+        justify-content: center;
+        padding: 2vh 3vw 2vh 3vw;
+        border: 1px solid rgba(0, 0, 0, 0);
+        box-shadow: 0px 25px 30px -5px rgba(0, 0, 0, 0.1);
+        border-radius: 2px;
+        font-size: 4vw;
+    }
+    
+    .box-3 span {
+        font-size: 1.1rem;
+        font-weight: 600;
+        display: flex;
+        justify-content: left;
+        padding-left: 2vw;
+        padding-bottom: 1vh;
+    }
+    
+    .box-4 {
+        grid-area: D
+    }
+    
+    .box-5 {
+        grid-area: E
+    }
+    
+    .box-6 {
+        grid-area: F
+    }
+    
+    .box-7 {
+        grid-area: G
+    }
+    
+    .box-8 {
+        grid-area: H
+    }
+    
+    .box-9 {
+        grid-area: I
+    }
+    
+    .box-10 {
+        grid-area: J;
+    }
+    
+    .footer-main {
+        z-index: 1;
+        background-color: rgba(199, 194, 188, 0.205);
+        font-weight: 600;
+        font-size: 1rem;
+        display: flex;
+        justify-content: center;
+        position: relative;
+        opacity: .8;
+        padding: 1%;
+        height: fit-content;   
+    }
+}
