--- a/individual-work/second-website/style.css
+++ b/individual-work/second-website/style.css
@@ -40,7 +40,7 @@ body {
     justify-content: space-around;
     /* margin-left: 75vw;*/
     margin-left: 1.5vw;
-    margin-right: 5vh;
+    margin-right: 1.5vw;
     padding: 1%;
     background-color: rgba(0, 0, 0, 0);
 }
@@ -68,14 +68,14 @@ body {
     margin-left: 5vh;
 }
 
-.nav-bar-sub-main-photo img {
+/* .nav-bar-sub-main-photo img {
     height: auto;
     width: 50%;
     margin-top: 7%;
     margin-left: 4%;
     z-index: 12;
     position: relative;
-}
+} */
 
 .nav-bar-sub-main button {
     text-decoration: none;
@@ -207,17 +207,18 @@ body {
 
 .box-3 {
     grid-area: C;
-    width: 60vw;
+    width: 60%;
+    height: auto;        
+    font-size: 100%;
     justify-content: center;
     padding: 2vh 3vw 2vh 3vw;
     border: 1px solid rgba(0, 0, 0, 0);
     box-shadow: 0px 25px 30px -5px rgba(0, 0, 0, 0.1);
     border-radius: 2px;
-    font-size: 0.9vw;
 }
 
 .box-3 span {
-    font-size: 1.1rem;
+    font-size: 110%;
     font-weight: 600;
     display: flex;
     justify-content: left;
@@ -369,22 +370,6 @@ body {
 @media only screen and (min-device-width: 375px) and (max-device-width: 667px) and (orientation: portrait){
     body{
     }
-    .nav-bar-main {
-        display: flex;
-        justify-content: center;
-        position: relative;
-        z-index: 5;
-    }
-    
-    .nav-bar-sub-main {
-        position: relative;
-        z-index: 8;
-        display: flex;
-        justify-content: space-evenly;
-        padding: 1%;
-        background-color: rgba(0, 245, 90, 0);
-    }
-    
     .line-divider-main {
         z-index: 5;
         position: relative;
@@ -399,22 +384,37 @@ body {
         border-bottom: black 1px solid;
         margin: -3vh 0vw 0vh 0vw;
     }   
+
+    .nav-bar-main {
+        display: flex;
+        justify-content: center;
+        position: relative;
+        z-index: 5;
+    }
     
+    .nav-bar-sub-main {
+        position: relative;
+        z-index: 8;
+        display:flex;
+        justify-items: space-evenly;
+        padding: 1%;
+        background-color: rgba(0, 245, 90, 0);
+        width: 70vw;
+    }    
+    .nav-bar-item{
+        width: 10vw;
+    }
     .nav-bar-sub-main button {
-        scale: .7;
         text-decoration: none;
-        font-size: 1.3rem;
+        font-size: 130%;
         padding-top: .5vh;
         padding-right: .9vh;
         padding-bottom: .5vh;
         padding-left: .9vh;
-        width: fit-content;
-        height: auto;
         cursor: pointer;
         position: relative;
         transition-duration: 0.4s;
         text-align: center;
-        display: inline-flex;
         color: rgb(4, 4, 4);
         background-color: rgba(0, 0, 0, 0);
         border: rgb(4, 4, 4);
@@ -495,11 +495,10 @@ body {
         justify-content: space-around;
         align-items: space-around; */
         margin-top: 4vh;
-        margin-bottom: 10vh;
         display: grid;
         align-items: center;
         justify-items: center;
-        gap: 2% 2%;
+        gap: 1% 2%;
         grid-template-areas:
             "A A A A"
             "B B B B"
@@ -515,22 +514,23 @@ body {
     }
     
     .box-2 {
-        grid-area: B;
+        grid-area: C;
     }
     
     .box-3 {
-        grid-area: C;
+        grid-area: B;
         width: 90vw;
+        height: auto;        
+        font-size: 90%;
         justify-content: center;
         padding: 2vh 3vw 2vh 3vw;
         border: 1px solid rgba(0, 0, 0, 0);
         box-shadow: 0px 25px 30px -5px rgba(0, 0, 0, 0.1);
         border-radius: 2px;
-        font-size: 4vw;
     }
     
     .box-3 span {
-        font-size: 1.1rem;
+        font-size: 110%;
         font-weight: 600;
         display: flex;
         justify-content: left;
@@ -567,6 +567,7 @@ body {
     }
     
     .footer-main {
+        margin-top: 12vh;
         z-index: 1;
         background-color: rgba(199, 194, 188, 0.205);
         font-weight: 600;
