--- a/individual-work/second-website/about.css
+++ b/individual-work/second-website/about.css
@@ -1,195 +1,266 @@
 :root {
-    font-family: 'Chakra Petch', sans-serif;
+  font-family: "Chakra Petch", sans-serif;
 }
 
-html, body {
-    scroll-behavior: smooth;
-    -ms-overflow-style: none;
-    scrollbar-width: none;
+html,
+body {
+  scroll-behavior: smooth;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
 }
 
-html::-webkit-scrollbar, body::-webkit-scrollbar {
-    display: none;
+html::-webkit-scrollbar,
+body::-webkit-scrollbar {
+  display: none;
 }
 
 body {
-    background-color: #ffffff;
-    /* background-image: linear-gradient(90deg, rgba(155, 153, 153, 0.3)1px, transparent 0);
-    background-size: 50vw;  */ 
-}
-
-.nav-bar-main {
-    display: flex;
-    justify-content: right;
-    position: relative;
-    z-index: 5;
-}
-
-.nav-bar-sub-main {
-    position: relative;
-    z-index: 8;
-    display: flex;
-    justify-content: space-around;
-    /* margin-left: 75vw;*/
-    margin-left: 1.5vw;
-    margin-right: 5vh;
-    padding: 1%;
-    background-color: rgba(0, 0, 0, 0);
+  background-color: #ffffff;
+  /* background-image: linear-gradient(90deg, rgba(155, 153, 153, 0.3)1px, transparent 0);
+    background-size: 50vw;  */
 }
 
 .line-divider-main {
-    z-index: 5;
-    position: relative;
-    display: flex;
-    justify-content: right;
+  z-index: 5;
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: right;
+      -ms-flex-pack: right;
+          justify-content: right;
 }
 
-.line-divider {
-    width: 27vw;
-    border-radius: none;
-    box-shadow: 0px 15px 12px -10px rgba(0, 0, 0, 0.58);
-    border-bottom: black 1px solid;
-    margin: -3vh 6vw 0vh 60%;
+.line-divider-main .line-divider {
+  width: 27vw;
+  border-radius: none;
+  -webkit-box-shadow: 0px 15px 12px -10px rgba(0, 0, 0, 0.58);
+          box-shadow: 0px 15px 12px -10px rgba(0, 0, 0, 0.58);
+  border-bottom: black 1px solid;
+  margin: -3vh 6vw 0vh 0vw;
 }
 
 .nav-bar-main-photo {
-    position: absolute;
-    z-index: 10;
-    display: inline-flex;
-    justify-content: center;
-    margin-left: 5vh;
+  position: absolute;
+  z-index: 10;
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin-left: 5vh;
 }
 
-.nav-bar-sub-main-photo img {
-    max-height: auto;
-    max-width: 50%;
-    margin-top: 7%;
-    margin-left: 4%;
-    z-index: 12;
-    position: relative;
+.nav-bar-main-photo .nav-bar-sub-main-photo img {
+  max-height: auto;
+  max-width: 50%;
+  margin-top: 7%;
+  margin-left: 4%;
+  z-index: 12;
+  position: relative;
+}
+
+.nav-bar-main {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: right;
+      -ms-flex-pack: right;
+          justify-content: right;
+  position: relative;
+  z-index: 5;
+}
+
+.nav-bar-sub-main {
+  position: relative;
+  z-index: 8;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  /* margin-left: 75vw;*/
+  margin-left: 1.5vw;
+  margin-right: 6vh;
+  padding: 1%;
+  background-color: rgba(0, 0, 0, 0);
 }
 
 .nav-bar-sub-main button {
-    text-decoration: none;
-    font-size: 1.3rem;
-    margin: 2%;
-    margin-right: 1.5vw;
-    padding-top: .5vh;
-    padding-right: .9vh;
-    padding-bottom: .5vh;
-    padding-left: .9vh;
-    width: auto;
-    height: auto;
-    cursor: pointer;
-    position: relative;
-    transition-duration: 0.4s;
-    text-align: center;
-    display: inline-flex;
-    color: rgb(4, 4, 4);
-    background-color: rgba(0, 0, 0, 0);
-    border: rgb(4, 4, 4);
+  text-decoration: none;
+  font-size: 1.3rem;
+  margin: 2%;
+  margin-right: 1vw;
+  padding-top: 0.5vh;
+  padding-right: 1vw;
+  padding-bottom: 0.5vh;
+  padding-left: 1vw;
+  width: auto;
+  height: auto;
+  cursor: pointer;
+  position: relative;
+  -webkit-transition-duration: 0.4s;
+          transition-duration: 0.4s;
+  text-align: center;
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  color: #040404;
+  background-color: rgba(0, 0, 0, 0);
+  border: #040404;
 }
 
 .nav-bar-sub-main button::after {
-    content: "";
-    width: 11px;
-    height: 11px;
-    position: absolute;
-    transition: 0.4s;
-    cursor: pointer;
+  content: "";
+  width: 11px;
+  height: 11px;
+  position: absolute;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+  cursor: pointer;
 }
 
 .nav-bar-sub-main button::before {
-    content: "";
-    width: 11px;
-    height: 11px;
-    position: absolute;
-    transition: 0.4s;
-    cursor: pointer;
+  content: "";
+  width: 11px;
+  height: 11px;
+  position: absolute;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+  cursor: pointer;
 }
 
 .nav-bar-sub-main button::after {
-    top: -1px;
-    left: -1px;
-    border-top: rgb(4, 4, 4) 2px solid;
-    border-left: rgb(4, 4, 4) 2px solid;
-    cursor: pointer;
+  top: -1px;
+  left: -1px;
+  border-top: #040404 2px solid;
+  border-left: #040404 2px solid;
+  cursor: pointer;
 }
 
 .nav-bar-sub-main button::before {
-    bottom: -1px;
-    right: -1px;
-    border-bottom: rgb(4, 4, 4) 2px solid;
-    border-right: rgb(4, 4, 4) 2px solid;
-    cursor: pointer;
+  bottom: -1px;
+  right: -1px;
+  border-bottom: #040404 2px solid;
+  border-right: #040404 2px solid;
+  cursor: pointer;
 }
 
 .nav-bar-sub-main button:hover::before {
-    width: 110%;
-    height: 125%;
-    cursor: pointer;
+  width: 95%;
+  height: 80%;
+  cursor: pointer;
 }
 
 .nav-bar-sub-main button:hover::after {
-    width: 110%;
-    height: 125%;
-    cursor: pointer;
+  width: 95%;
+  height: 80%;
+  cursor: pointer;
 }
 
-.nav-bar-sub-main button:hover {
+/* .nav-bar-sub-main button:hover {
     box-shadow: 0px 0px 25px 20px rgba(0, 0, 0, 0.1);
+} */
+#first-grid {
+  background-image: url(imgs/background-about-2.jpg);
+  background-position: center;
+  background-size: cover;
+  height: 65vh;
+  margin-bottom: 10vh;
 }
-#first-grid{
-    background-image: url(background-about-2.jpg);
-    background-position: center;
-    background-size: cover; 
-    height: 65vh;
-    margin-bottom: 10vh;
-}
+
 .content-main {
-    position: relative;
-    margin: 10vh 0vw 0vh 0vw;
-    height: 65vh;
-    z-index: 1;  
-    
+  position: relative;
+  margin: 10vh 0vw 0vh 0vw;
+  height: 65vh;
+  z-index: 1;
 }
 
 .content-sub-main {
-   
-    margin-top: 10vh;
-    margin-right: 3vw;
-    margin-bottom: 0vh;
-    margin-left: 3vw;
-    display: grid;
-    gap: 12vh 0%;
-    grid-template-areas:
-        "A A A A"
-        "B B B B";
+  margin-top: 10vh;
+  margin-right: 3vw;
+  margin-bottom: 0vh;
+  margin-left: 3vw;
+  display: -ms-grid;
+  display: grid;
+  gap: 12vh 0%;
+      grid-template-areas: "A A A A" "B B B B";
 }
 
 .box-1 {
-    grid-area: A;
-    justify-self: center;
-    margin-top: 5vh;    
-    max-width: 55vw;
-    padding: 3vh 3vw 3vh 3vw;
-    border: 1px solid rgba(0, 0, 0, 0);
-    box-shadow: -30px 50px 40px -15px rgba(0, 0, 0, 0.2);
-    background-color: white;
-    border-radius: 2px;
-    font-size: 0.9vw;
+  -ms-grid-row: 1;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 4;
+  grid-area: A;
+  -ms-grid-column-align: center;
+      justify-self: center;
+  margin-top: 5vh;
+  max-width: 55vw;
+  padding: 3vh 3vw 3vh 3vw;
+  border: 1px solid rgba(0, 0, 0, 0);
+  -webkit-box-shadow: -30px 50px 40px -15px rgba(0, 0, 0, 0.2);
+          box-shadow: -30px 50px 40px -15px rgba(0, 0, 0, 0.2);
+  background-color: white;
+  border-radius: 2px;
+  font-size: 0.9vw;
+}
+
+.box-1 {
+  padding: 0.8em 1.8em;
+  border: 2px solid #17c3b2;
+  position: relative;
+  overflow: hidden;
+  background-color: transparent;
+  text-align: center;
+  text-transform: uppercase;
+  font-size: 16px;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+  z-index: 1;
+  font-family: inherit;
+  color: #17c3b2;
+}
+
+.box-1::before {
+  content: "";
+  width: 0;
+  height: 300%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%) rotate(45deg);
+          transform: translate(-50%, -50%) rotate(45deg);
+  background: #17c3b2;
+  -webkit-transition: 0.5s ease;
+  transition: 0.5s ease;
+  display: block;
+  z-index: -1;
+}
+
+.box-1:hover::before {
+  width: 105%;
+}
+
+.box-1:hover {
+  color: #111;
 }
 
 .box-2 {
-    grid-area: B;    
-    justify-self: center;
-    max-width: 65vw;
-    padding: 3vh 3vw 3vh 3vw;
-    border: 1px solid rgba(0, 0, 0, 0);
-    background-color: white;
-    box-shadow: -10px -30px 40px -15px rgba(0, 0, 0, 0.1);
-    border-radius: 2px;
-    font-size: 0.9vw;
+  -ms-grid-row: 2;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 4;
+  grid-area: B;
+  -ms-grid-column-align: center;
+      justify-self: center;
+  max-width: 65vw;
+  padding: 3vh 3vw 3vh 3vw;
+  border: 1px solid rgba(0, 0, 0, 0);
+  background-color: white;
+  -webkit-box-shadow: -10px -30px 40px -15px rgba(0, 0, 0, 0.1);
+          box-shadow: -10px -30px 40px -15px rgba(0, 0, 0, 0.1);
+  border-radius: 2px;
+  font-size: 0.9vw;
 }
 
 /* #second-grid{
@@ -222,187 +293,213 @@ body {
     border-radius: 2px;
     font-size: 0.9vw;
 } */
-
 .footer-main {
+  z-index: 1;
+  background-color: rgba(199, 194, 188, 0.205);
+  font-weight: 600;
+  font-size: 1rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  position: relative;
+  opacity: 0.8;
+  padding: 1%;
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
+}
+
+@media only screen and (min-device-width: 375px) and (max-device-width: 667px) and (orientation: portrait) {
+  body {
+    background-color: red;
+  }
+  .nav-bar-main {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    position: relative;
+    z-index: 5;
+  }
+  .nav-bar-sub-main {
+    position: relative;
+    z-index: 8;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: space-evenly;
+        -ms-flex-pack: space-evenly;
+            justify-content: space-evenly;
+    padding: 1%;
+    background-color: rgba(0, 245, 90, 0.959);
+  }
+  .line-divider-main {
+    z-index: 5;
+    position: relative;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .line-divider {
+    width: 60vw;
+    border-radius: none;
+    -webkit-box-shadow: 0px 15px 12px -10px rgba(0, 0, 0, 0.58);
+            box-shadow: 0px 15px 12px -10px rgba(0, 0, 0, 0.58);
+    border-bottom: black 1px solid;
+    margin: -3vh 0vw 0vh 0vw;
+  }
+  .nav-bar-sub-main button {
+    scale: 0.7;
+    text-decoration: none;
+    font-size: 1.3rem;
+    padding-top: 0.5vh;
+    padding-right: 0.9vh;
+    padding-bottom: 0.5vh;
+    padding-left: 0.9vh;
+    width: -webkit-fit-content;
+    width: -moz-fit-content;
+    width: fit-content;
+    height: auto;
+    cursor: pointer;
+    position: relative;
+    -webkit-transition-duration: 0.4s;
+            transition-duration: 0.4s;
+    text-align: center;
+    display: -webkit-inline-box;
+    display: -ms-inline-flexbox;
+    display: inline-flex;
+    color: #040404;
+    background-color: rgba(0, 0, 0, 0);
+    border: #040404;
+  }
+  .nav-bar-sub-main button::after {
+    content: "";
+    width: 11px;
+    height: 11px;
+    position: absolute;
+    -webkit-transition: 0.4s;
+    transition: 0.4s;
+    cursor: pointer;
+  }
+  .nav-bar-sub-main button::before {
+    content: "";
+    width: 11px;
+    height: 11px;
+    position: absolute;
+    -webkit-transition: 0.4s;
+    transition: 0.4s;
+    cursor: pointer;
+  }
+  .nav-bar-sub-main button::after {
+    top: -1px;
+    left: -1px;
+    border-top: #040404 2px solid;
+    border-left: #040404 2px solid;
+    cursor: pointer;
+  }
+  .nav-bar-sub-main button::before {
+    bottom: -1px;
+    right: -1px;
+    border-bottom: #040404 2px solid;
+    border-right: #040404 2px solid;
+    cursor: pointer;
+  }
+  .nav-bar-sub-main button:hover::before {
+    width: 110%;
+    height: 125%;
+    cursor: pointer;
+  }
+  .nav-bar-sub-main button:hover::after {
+    width: 110%;
+    height: 125%;
+    cursor: pointer;
+  }
+  .nav-bar-sub-main button:hover {
+    -webkit-box-shadow: 0px 0px 25px 20px rgba(0, 0, 0, 0.1);
+            box-shadow: 0px 0px 25px 20px rgba(0, 0, 0, 0.1);
+  }
+  #first-grid {
+    background-image: url(background-about-2.jpg);
+    background-position: center;
+    background-size: cover;
+    height: 65vh;
+    margin-top: -5vh;
+    margin-bottom: 10vh;
+  }
+  .content-main {
+    position: relative;
+    margin: 10vh 0vw 0vh 0vw;
+    height: 65vh;
+    z-index: 1;
+  }
+  .content-sub-main {
+    margin-top: 10vh;
+    margin-right: 3vw;
+    margin-bottom: 0vh;
+    margin-left: 3vw;
+    display: -ms-grid;
+    display: grid;
+    gap: 12vh 0%;
+        grid-template-areas: "A A A A" "B B B B";
+  }
+  .box-1 {
+    -ms-grid-row: 1;
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 4;
+    grid-area: A;
+    -ms-grid-column-align: center;
+        justify-self: center;
+    margin-top: 5vh;
+    max-width: 55vw;
+    padding: 3vh 3vw 3vh 3vw;
+    border: 1px solid rgba(0, 0, 0, 0);
+    -webkit-box-shadow: -30px 50px 40px -15px rgba(0, 0, 0, 0.2);
+            box-shadow: -30px 50px 40px -15px rgba(0, 0, 0, 0.2);
+    background-color: white;
+    border-radius: 2px;
+    font-size: 0.9vw;
+  }
+  .box-2 {
+    -ms-grid-row: 2;
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 4;
+    grid-area: B;
+    -ms-grid-column-align: center;
+        justify-self: center;
+    max-width: 65vw;
+    padding: 3vh 3vw 3vh 3vw;
+    border: 1px solid rgba(0, 0, 0, 0);
+    background-color: white;
+    -webkit-box-shadow: -10px -30px 40px -15px rgba(0, 0, 0, 0.1);
+            box-shadow: -10px -30px 40px -15px rgba(0, 0, 0, 0.1);
+    border-radius: 2px;
+    font-size: 0.9vw;
+  }
+  .footer-main {
     z-index: 1;
     background-color: rgba(199, 194, 188, 0.205);
     font-weight: 600;
     font-size: 1rem;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
     position: relative;
-    opacity: .8;
+    opacity: 0.8;
     padding: 1%;
-    height: fit-content;   
+    height: -webkit-fit-content;
+    height: -moz-fit-content;
+    height: fit-content;
+  }
 }
-@media only screen and (min-device-width: 375px) and (max-device-width: 667px) and (orientation: portrait){
-    body{
-        background-color: red;
-    }
-    .nav-bar-main {
-        display: flex;
-        justify-content: center;
-        position: relative;
-        z-index: 5;
-    }
-    
-    .nav-bar-sub-main {
-        position: relative;
-        z-index: 8;
-        display: flex;
-        justify-content: space-evenly;
-        padding: 1%;
-        background-color: rgba(0, 245, 90, 0.959);
-    }
-    
-    .line-divider-main {
-        z-index: 5;
-        position: relative;
-        display: flex;
-        justify-content: center;
-    }
-    
-    .line-divider {
-        width: 60vw;
-        border-radius: none;
-        box-shadow: 0px 15px 12px -10px rgba(0, 0, 0, 0.58);
-        border-bottom: black 1px solid;
-        margin: -3vh 0vw 0vh 0vw;
-    }   
-    
-    .nav-bar-sub-main button {
-        scale: .7;
-        text-decoration: none;
-        font-size: 1.3rem;
-        padding-top: .5vh;
-        padding-right: .9vh;
-        padding-bottom: .5vh;
-        padding-left: .9vh;
-        width: fit-content;
-        height: auto;
-        cursor: pointer;
-        position: relative;
-        transition-duration: 0.4s;
-        text-align: center;
-        display: inline-flex;
-        color: rgb(4, 4, 4);
-        background-color: rgba(0, 0, 0, 0);
-        border: rgb(4, 4, 4);
-    }
-    
-    .nav-bar-sub-main button::after {
-        content: "";
-        width: 11px;
-        height: 11px;
-        position: absolute;
-        transition: 0.4s;
-        cursor: pointer;
-    }
-    
-    .nav-bar-sub-main button::before {
-        content: "";
-        width: 11px;
-        height: 11px;
-        position: absolute;
-        transition: 0.4s;
-        cursor: pointer;
-    }
-    
-    .nav-bar-sub-main button::after {
-        top: -1px;
-        left: -1px;
-        border-top: rgb(4, 4, 4) 2px solid;
-        border-left: rgb(4, 4, 4) 2px solid;
-        cursor: pointer;
-    }
-    
-    .nav-bar-sub-main button::before {
-        bottom: -1px;
-        right: -1px;
-        border-bottom: rgb(4, 4, 4) 2px solid;
-        border-right: rgb(4, 4, 4) 2px solid;
-        cursor: pointer;
-    }
-    
-    .nav-bar-sub-main button:hover::before {
-        width: 110%;
-        height: 125%;
-        cursor: pointer;
-    }
-    
-    .nav-bar-sub-main button:hover::after {
-        width: 110%;
-        height: 125%;
-        cursor: pointer;
-    }
-    
-    .nav-bar-sub-main button:hover {
-        box-shadow: 0px 0px 25px 20px rgba(0, 0, 0, 0.1);
-    }
-    #first-grid{
-        background-image: url(background-about-2.jpg);
-        background-position: center;
-        background-size: cover; 
-        height: 65vh;
-        margin-top: -5vh;
-        margin-bottom: 10vh;
-    }
-    .content-main {
-        position: relative;
-        margin: 10vh 0vw 0vh 0vw;
-        height: 65vh;
-        z-index: 1;  
-        
-    }
-    
-    .content-sub-main {
-       
-        margin-top: 10vh;
-        margin-right: 3vw;
-        margin-bottom: 0vh;
-        margin-left: 3vw;
-        display: grid;
-        gap: 12vh 0%;
-        grid-template-areas:
-            "A A A A"
-            "B B B B";
-    }
-    
-    .box-1 {
-        grid-area: A;
-        justify-self: center;
-        margin-top: 5vh;    
-        max-width: 55vw;
-        padding: 3vh 3vw 3vh 3vw;
-        border: 1px solid rgba(0, 0, 0, 0);
-        box-shadow: -30px 50px 40px -15px rgba(0, 0, 0, 0.2);
-        background-color: white;
-        border-radius: 2px;
-        font-size: 0.9vw;
-    }
-    
-    .box-2 {
-        grid-area: B;    
-        justify-self: center;
-        max-width: 65vw;
-        padding: 3vh 3vw 3vh 3vw;
-        border: 1px solid rgba(0, 0, 0, 0);
-        background-color: white;
-        box-shadow: -10px -30px 40px -15px rgba(0, 0, 0, 0.1);
-        border-radius: 2px;
-        font-size: 0.9vw;
-    }    
-    
-    .footer-main {
-        z-index: 1;
-        background-color: rgba(199, 194, 188, 0.205);
-        font-weight: 600;
-        font-size: 1rem;
-        display: flex;
-        justify-content: center;
-        position: relative;
-        opacity: .8;
-        padding: 1%;
-        height: fit-content;   
-    }
-}
+/*# sourceMappingURL=about.css.map */
