--- a/individual-work/second-website/about.css
+++ b/individual-work/second-website/about.css
@@ -72,7 +72,7 @@ body {
   z-index: 5;
 }
 
-.nav-bar-sub-main {
+.nav-bar-main .nav-bar-sub-main {
   position: relative;
   z-index: 8;
   display: -webkit-box;
@@ -175,9 +175,39 @@ body {
   margin: 10vh 0vw 0vh 0vw;
   height: 65vh;
   z-index: 1;
+  /* #second-grid{
+        margin-top: 10vh;
+        margin-bottom: 10vh;
+        background-image: url(background-about-1.jpg);
+        background-position: center;
+        background-size: cover; 
+        height: 75vh;
+    }
+    .content-main-second {
+        position: relative;
+        margin: 0;
+        height: auto;
+        z-index: 1; 
+    }
+    
+    .content-sub-main-second {  
+        display: flex;
+        justify-content: center;
+        align-content: center;
+    }
+    .box2-1 {
+        margin-top: 20vh;
+        max-width: 60vw;
+        padding: 3vh 3vw 3vh 3vw;
+        border: 1px solid rgba(0, 0, 0, 0);
+        background-color: white;
+        box-shadow: -30px 40px 45px -10px rgba(0, 0, 0, 0.1);
+        border-radius: 2px;
+        font-size: 0.9vw;
+    } */
 }
 
-.content-sub-main {
+.content-main .content-sub-main {
   margin-top: 10vh;
   margin-right: 3vw;
   margin-bottom: 0vh;
@@ -188,7 +218,7 @@ body {
       grid-template-areas: "A A A A" "B B B B";
 }
 
-.box-1 {
+.content-main .box-1 {
   -ms-grid-row: 1;
   -ms-grid-column: 1;
   -ms-grid-column-span: 4;
@@ -204,11 +234,8 @@ body {
   background-color: white;
   border-radius: 2px;
   font-size: 0.9vw;
-}
-
-.box-1 {
   padding: 0.8em 1.8em;
-  border: 2px solid #17c3b2;
+  border: 2px solid rgba(0, 0, 0, 0);
   position: relative;
   overflow: hidden;
   background-color: transparent;
@@ -219,10 +246,10 @@ body {
   transition: 0.3s;
   z-index: 1;
   font-family: inherit;
-  color: #17c3b2;
+  color: rgba(0, 0, 0, 0);
 }
 
-.box-1::before {
+.content-main .box-1::before {
   content: "";
   width: 0;
   height: 300%;
@@ -238,15 +265,15 @@ body {
   z-index: -1;
 }
 
-.box-1:hover::before {
+.content-main .box-1:hover::before {
   width: 105%;
 }
 
-.box-1:hover {
+.content-main .box-1:hover {
   color: #111;
 }
 
-.box-2 {
+.content-main .box-2 {
   -ms-grid-row: 2;
   -ms-grid-column: 1;
   -ms-grid-column-span: 4;
@@ -263,36 +290,6 @@ body {
   font-size: 0.9vw;
 }
 
-/* #second-grid{
-    margin-top: 10vh;
-    margin-bottom: 10vh;
-    background-image: url(background-about-1.jpg);
-    background-position: center;
-    background-size: cover; 
-    height: 75vh;
-}
-.content-main-second {
-    position: relative;
-    margin: 0;
-    height: auto;
-    z-index: 1; 
-}
-
-.content-sub-main-second {  
-    display: flex;
-    justify-content: center;
-    align-content: center;
-}
-.box2-1 {
-    margin-top: 20vh;
-    max-width: 60vw;
-    padding: 3vh 3vw 3vh 3vw;
-    border: 1px solid rgba(0, 0, 0, 0);
-    background-color: white;
-    box-shadow: -30px 40px 45px -10px rgba(0, 0, 0, 0.1);
-    border-radius: 2px;
-    font-size: 0.9vw;
-} */
 .footer-main {
   z-index: 1;
   background-color: rgba(199, 194, 188, 0.205);
