--- a/individual-work/pololetni-prace/styles/_section.scss
+++ b/individual-work/pololetni-prace/styles/_section.scss
@@ -39,7 +39,7 @@ section {
     
 }
 
-.section-item:nth-child(1) {
+&:nth-child(1) {
     margin: 110px 30% 5% 10%;
     padding: 20px 30px 20px 30px;
     background-color: $section-bg;
@@ -51,7 +51,7 @@ section {
     transform: scale(110%);
 }
 
-.section-item:nth-child(2) {
+&:nth-child(2) {
     margin: 0% 5% 5% 30%;
     padding: 20px 30px 30px 30px;
     background-color: $section-bg;
@@ -63,7 +63,7 @@ section {
     transform: scale(110%);
 }
 
-.section-item:nth-child(3) {
+&:nth-child(3) {
     margin: 0% 1% 3% 63%;
     padding: 20px 30px 20px 30px;
     background-color: $section-bg;
@@ -75,7 +75,7 @@ section {
     transform: scale(110%);
 }
 
-.section-item:nth-child(4) {
+&:nth-child(4) {
     margin: 0% 30% 0% 15%;
     padding: 20px 25px 20px 30px;
     background-color: $section-bg;
