--- a/individual-work/template-website/styles/style.css
+++ b/individual-work/template-website/styles/style.css
@@ -1,1 +1,12 @@
-/* No CSS *//*# sourceMappingURL=style.css.map */
+html,
+body {
+  scroll-behavior: smooth;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
+html::-webkit-scrollbar,
+body::-webkit-scrollbar {
+  display: none;
+}
+/*# sourceMappingURL=style.css.map */
