--- a/individual-work/template-website/styles/style.css
+++ b/individual-work/template-website/styles/style.css
@@ -1,3 +1,47 @@
+.nav-bar {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  height: 8vh;
+  background-color: rebeccapurple;
+}
+
+.nav-bar .nav-bar-item:nth-child(1) {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-item-align: center;
+      align-self: center;
+}
+
+.nav-bar .nav-bar-item:nth-child(1) img {
+  padding: 20%;
+  margin-left: 15%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-item-align: center;
+      align-self: center;
+}
+
+.nav-bar .nav-bar-item:nth-child(2) {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-item-align: center;
+      align-self: center;
+  justify-self: right;
+  padding: 20%;
+}
+
+.nav-bar .nav-bar-item:nth-child(2) p {
+  margin-right: 15%;
+}
+
+.main-content {
+  background-color: #f2f2f2;
+}
+
 html,
 body {
   scroll-behavior: smooth;
