--- a/individual-work/template-website/styles/_var.scss
+++ b/individual-work/template-website/styles/_var.scss
@@ -1,1 +1,10 @@
-$main-content-bg: #f2f2f2;
+$main-content-bg: #dad5d5be;
+$abel: 'Abel', sans-serif;
+$anton: 'Anton', sans-serif;
+$dosis:'Dosis', sans-serif;
+$rubik: 'Rubik', sans-serif;
+$kanit: 'Kanit', sans-serif;
+$open-sans: 'Open Sans', sans-serif;
+$exo: 'Exo', sans-serif;
+$pragati: 'Pragati Narrow', sans-serif;;
+$wallpoet: 'Wallpoet';
