--- a/individual-work/template-website/styles/_header.scss
+++ b/individual-work/template-website/styles/_header.scss
@@ -1,7 +1,7 @@
 .nav-bar {
     display: flex;
     height: 8vh;
-    background-color: rebeccapurple;
+    background-color: white;
     .nav-bar-item:nth-child(1) {
         display: flex;
         align-self: center;
