--- a/individual-work/template-website/styles/_var.scss
+++ b/individual-work/template-website/styles/_var.scss
@@ -1,10 +1,19 @@
-$main-content-bg: #dad5d5be;
-$abel: 'Abel', sans-serif;
-$anton: 'Anton', sans-serif;
-$dosis:'Dosis', sans-serif;
-$rubik: 'Rubik', sans-serif;
-$kanit: 'Kanit', sans-serif;
-$open-sans: 'Open Sans', sans-serif;
-$exo: 'Exo', sans-serif;
-$pragati: 'Pragati Narrow', sans-serif;;
-$wallpoet: 'Wallpoet';
+@import url("https://fonts.googleapis.com/css2?family=Quicksand&display=swap");
+$main-content-bg: #f2f2f2;
+$grid-bg: #d9d9d9;
+$abel: "Abel", sans-serif;
+$anton: "Anton", sans-serif;
+$dosis: "Dosis", sans-serif;
+$rubik: "Rubik", sans-serif;
+$kanit: "Kanit", sans-serif;
+$open-sans: "Open Sans", sans-serif;
+$exo: "Exo", sans-serif;
+$pragati: "Pragati Narrow", sans-serif;
+$wallpoet: "Wallpoet";
+$condensed: "Open Sans Condensed", sans-serif;
+$quicksand: "Quicksand", sans-serif;
+$comfortaa: 'Comfortaa';
+$box-centralization: 8% 12% 12% 12%;
+$box-shadowing: 0px 0px 20px 0px rgba(0, 0, 0, 0.3);
+$box-radius: 2px;
+$icon-centralization: 6% 10% 0% 10%;
