--- a/individual-work/template-website/styles/_content.scss
+++ b/individual-work/template-website/styles/_content.scss
@@ -1,7 +1,7 @@
 .main-content {
-    background-color: $main-content-bg;
-    .sub-main-content {      
-        margin: 0vh 11vw 0% 11vw;
+    .sub-main-content {
+        background-color: $main-content-bg;
+        margin: 7vh 11vw 0vh 11vw;
         display: flex;
         justify-content: space-between;
         align-items: center;
@@ -10,38 +10,162 @@
     .sub-main-item:nth-child(1) {
         font-family: $abel;
         font-weight: 600;
-        margin: 5vh 10vw 0 10vw;
+        margin: 0vh 2vw 0vh 2vw;
         letter-spacing: 5px;
         text-align: center;
         font-size: 1.1rem;
     }
     .sub-main-item:nth-child(2) {
         font-family: $anton;
-        font-size: 2rem;
+        font-size: 1.5rem;
         font-weight: bolder;
         margin-top: 3vh;
         letter-spacing: 2px;
     }
     .sub-main-item:nth-child(3) {
-        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
         margin-top: 3vh;
         text-align: center;
     }
-    .button{
-        margin-top: 5vh;
-        & button {
-            font-size: 1rem;
-            padding-top: 1.2vh;
-            padding-right: 7.2vw;
-            padding-bottom: 1.2vh;
-            padding-left: 7.2vw;
+    .button {
+        margin-top: 6vh;
+        margin-bottom: 4vh;
+        button {
+            font-size: 0.9rem;
+            padding-top: 1.3vh;
+            padding-right: 2rem;
+            padding-bottom: 1.3vh;
+            padding-left: 2rem;
             letter-spacing: 1px;
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
             font-weight: 600;
-            color: white;
-            border-radius: 25px;
-            background-color: #594adb;
-            border: rgba(0,0,0,0);
+            text-decoration: none;
+            position: relative;
+            cursor: pointer;
+            border: none;
+            color: #fff;
+            outline: none;
+            background: linear-gradient(90deg, #e40303, #ff8c00, #ffed00, #008026, #004dff, #750787);
+            background-size: 300%;
+            border-radius: 30px;
+            z-index: 1;
+            transition: all 0.4s ease 0s;
         }
-    }    
+
+        button:hover {
+            animation: ani 8s linear infinite;
+            border: none;
+            transform: translateY(-7px);
+        }
+
+        @keyframes ani {
+            0% {
+                background-position: 0%;
+            }
+
+            100% {
+                background-position: 400%;
+            }
+        }
+
+        button:before {
+            content: "";
+            position: absolute;
+            top: -5px;
+            left: -5px;
+            right: -5px;
+            bottom: -5px;
+            z-index: -1;
+            background: linear-gradient(to bottom, #e40303, #ff8c00, #ffed00, #008026, #004dff, #750787); /* 90deg */
+            background-size: 400%;
+            border-radius: 35px;
+            transition: 1s;
+        }
+
+        button:hover::before {
+            filter: blur(20px);
+        }
+
+        button:active {
+            background: linear-gradient(32deg, #e40303, #ff8c00, #ffed00, #008026, #004dff, #750787);
+        }
+    }
+    .grid {
+        background-color: $grid-bg;
+        border: red 1px solid;
+        .sub-grid {
+            h1 {
+                margin: 3% 8% 0% 8%;
+                font-size: 1.3rem;
+                font-style: italic;
+                font-family: $condensed;
+            }
+            p {
+                margin: 3% 8% 8% 8%;
+                font-size: .9rem;
+                font-family: $comfortaa;
+            }
+
+            .A {
+                display: flex;
+                flex-direction: column;
+                background-color: white;
+                margin: $box-centralization;
+                border-radius: $box-radius;
+                box-shadow: $box-shadowing;
+                img {
+                    margin: $icon-centralization;
+                    max-width: fit-content;
+                    padding: 15px;
+                    background-color: #f17c0e;
+                    border-radius: 50px;
+                }
+            }
+            .B {
+                display: flex;
+                flex-direction: column;
+                background-color: white;
+                margin: $box-centralization;
+                border-radius: $box-radius;
+                box-shadow: $box-shadowing;
+                img {
+                    margin: $icon-centralization;
+                    max-width: fit-content;
+                    padding: 15px;
+                    background-color: #594adb;
+                    border-radius: 50px;
+                }
+            }
+            .C {
+                display: flex;
+                flex-direction: column;
+                background-color: white;
+                margin: $box-centralization;
+                border-radius: $box-radius;
+                box-shadow: $box-shadowing;
+                img {
+                    margin: $icon-centralization;
+                    max-width: fit-content;
+                    padding: 15px;
+                    background-color: #0cb5c5;
+                    border-radius: 50px;
+                }
+            }
+            .D {
+                display: flex;
+                flex-direction: column;
+                background-color: white;
+                margin: $box-centralization;
+                border-radius: $box-radius;
+                box-shadow: $box-shadowing;
+                img {
+                    margin: $icon-centralization;
+                    max-width: fit-content;
+                    padding: 15px;
+                    background-color: #ee3f47;
+                    border-radius: 50px;
+                }
+            }
+        }
+    }
 }
