--- a/individual-work/template-website/styles/style.css
+++ b/individual-work/template-website/styles/style.css
@@ -1,8 +1,9 @@
+@import url("https://fonts.googleapis.com/css2?family=Quicksand&display=swap");
 .nav-bar {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  height: 8vh;
+  height: 11vh;
   background-color: white;
 }
 
@@ -38,12 +39,9 @@
   margin-right: 15%;
 }
 
-.main-content {
-  background-color: #dad5d5be;
-}
-
 .main-content .sub-main-content {
-  margin: 0vh 11vw 0% 11vw;
+  background-color: #f2f2f2;
+  margin: 7vh 11vw 0vh 11vw;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -62,7 +60,7 @@
 .main-content .sub-main-item:nth-child(1) {
   font-family: "Abel", sans-serif;
   font-weight: 600;
-  margin: 5vh 10vw 0 10vw;
+  margin: 0vh 2vw 0vh 2vw;
   letter-spacing: 5px;
   text-align: center;
   font-size: 1.1rem;
@@ -70,35 +68,215 @@
 
 .main-content .sub-main-item:nth-child(2) {
   font-family: "Anton", sans-serif;
-  font-size: 2rem;
+  font-size: 1.5rem;
   font-weight: bolder;
   margin-top: 3vh;
   letter-spacing: 2px;
 }
 
 .main-content .sub-main-item:nth-child(3) {
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   margin-top: 3vh;
   text-align: center;
 }
 
 .main-content .button {
-  margin-top: 5vh;
+  margin-top: 6vh;
+  margin-bottom: 4vh;
 }
 
 .main-content .button button {
-  font-size: 1rem;
-  padding-top: 1.2vh;
-  padding-right: 7.2vw;
-  padding-bottom: 1.2vh;
-  padding-left: 7.2vw;
+  font-size: 0.9rem;
+  padding-top: 1.3vh;
+  padding-right: 2rem;
+  padding-bottom: 1.3vh;
+  padding-left: 2rem;
   letter-spacing: 1px;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   font-weight: 600;
-  color: white;
-  border-radius: 25px;
+  text-decoration: none;
+  position: relative;
+  cursor: pointer;
+  border: none;
+  color: #fff;
+  outline: none;
+  background: -webkit-gradient(linear, left top, right top, from(#e40303), color-stop(#ff8c00), color-stop(#ffed00), color-stop(#008026), color-stop(#004dff), to(#750787));
+  background: linear-gradient(90deg, #e40303, #ff8c00, #ffed00, #008026, #004dff, #750787);
+  background-size: 300%;
+  border-radius: 30px;
+  z-index: 1;
+  -webkit-transition: all 0.4s ease 0s;
+  transition: all 0.4s ease 0s;
+}
+
+.main-content .button button:hover {
+  -webkit-animation: ani 8s linear infinite;
+          animation: ani 8s linear infinite;
+  border: none;
+  -webkit-transform: translateY(-7px);
+          transform: translateY(-7px);
+}
+
+@-webkit-keyframes ani {
+  0% {
+    background-position: 0%;
+  }
+  100% {
+    background-position: 400%;
+  }
+}
+
+@keyframes ani {
+  0% {
+    background-position: 0%;
+  }
+  100% {
+    background-position: 400%;
+  }
+}
+
+.main-content .button button:before {
+  content: "";
+  position: absolute;
+  top: -5px;
+  left: -5px;
+  right: -5px;
+  bottom: -5px;
+  z-index: -1;
+  background: -webkit-gradient(linear, left top, left bottom, from(#e40303), color-stop(#ff8c00), color-stop(#ffed00), color-stop(#008026), color-stop(#004dff), to(#750787));
+  background: linear-gradient(to bottom, #e40303, #ff8c00, #ffed00, #008026, #004dff, #750787);
+  /* 90deg */
+  background-size: 400%;
+  border-radius: 35px;
+  -webkit-transition: 1s;
+  transition: 1s;
+}
+
+.main-content .button button:hover::before {
+  -webkit-filter: blur(20px);
+          filter: blur(20px);
+}
+
+.main-content .button button:active {
+  background: linear-gradient(32deg, #e40303, #ff8c00, #ffed00, #008026, #004dff, #750787);
+}
+
+.main-content .grid {
+  background-color: #d9d9d9;
+  border: red 1px solid;
+}
+
+.main-content .grid .sub-grid h1 {
+  margin: 3% 8% 0% 8%;
+  font-size: 1.3rem;
+  font-style: italic;
+  font-family: "Open Sans Condensed", sans-serif;
+}
+
+.main-content .grid .sub-grid p {
+  margin: 3% 8% 8% 8%;
+  font-size: .9rem;
+  font-family: "Comfortaa";
+}
+
+.main-content .grid .sub-grid .A {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  background-color: white;
+  margin: 8% 12% 12% 12%;
+  border-radius: 2px;
+  -webkit-box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.3);
+          box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.3);
+}
+
+.main-content .grid .sub-grid .A img {
+  margin: 6% 10% 0% 10%;
+  max-width: -webkit-fit-content;
+  max-width: -moz-fit-content;
+  max-width: fit-content;
+  padding: 15px;
+  background-color: #f17c0e;
+  border-radius: 50px;
+}
+
+.main-content .grid .sub-grid .B {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  background-color: white;
+  margin: 8% 12% 12% 12%;
+  border-radius: 2px;
+  -webkit-box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.3);
+          box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.3);
+}
+
+.main-content .grid .sub-grid .B img {
+  margin: 6% 10% 0% 10%;
+  max-width: -webkit-fit-content;
+  max-width: -moz-fit-content;
+  max-width: fit-content;
+  padding: 15px;
   background-color: #594adb;
-  border: rgba(0, 0, 0, 0);
+  border-radius: 50px;
+}
+
+.main-content .grid .sub-grid .C {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  background-color: white;
+  margin: 8% 12% 12% 12%;
+  border-radius: 2px;
+  -webkit-box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.3);
+          box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.3);
+}
+
+.main-content .grid .sub-grid .C img {
+  margin: 6% 10% 0% 10%;
+  max-width: -webkit-fit-content;
+  max-width: -moz-fit-content;
+  max-width: fit-content;
+  padding: 15px;
+  background-color: #0cb5c5;
+  border-radius: 50px;
+}
+
+.main-content .grid .sub-grid .D {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  background-color: white;
+  margin: 8% 12% 12% 12%;
+  border-radius: 2px;
+  -webkit-box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.3);
+          box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.3);
+}
+
+.main-content .grid .sub-grid .D img {
+  margin: 6% 10% 0% 10%;
+  max-width: -webkit-fit-content;
+  max-width: -moz-fit-content;
+  max-width: fit-content;
+  padding: 15px;
+  background-color: #ee3f47;
+  border-radius: 50px;
 }
 
 html,
@@ -106,6 +284,7 @@ body {
   scroll-behavior: smooth;
   -ms-overflow-style: none;
   scrollbar-width: none;
+  background-color: #f2f2f2;
 }
 
 html::-webkit-scrollbar,
