--- a/individual-work/template-website/styles/_content.scss
+++ b/individual-work/template-website/styles/_content.scss
@@ -2,10 +2,19 @@
     .sub-main-content {
         background-color: $main-content-bg;
         margin: 7vh 11vw 0vh 11vw;
+        display: -webkit-box;
+        display: -ms-flexbox;
         display: flex;
-        justify-content: space-between;
-        align-items: center;
-        flex-direction: column;
+        -webkit-box-pack: justify;
+            -ms-flex-pack: justify;
+                justify-content: space-between;
+        -webkit-box-align: center;
+            -ms-flex-align: center;
+                align-items: center;
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+            -ms-flex-direction: column;
+                flex-direction: column;
     }
     .sub-main-item:nth-child(1) {
         font-family: $abel;
@@ -45,17 +54,37 @@
             border: none;
             color: #fff;
             outline: none;
-            background: linear-gradient(90deg, #e40303, #ff8c00, #ffed00, #008026, #004dff, #750787);
+           
+            background: -webkit-gradient(linear, left top, right top, from(#594adb));
+           
+            background: -o-linear-gradient(left, #594adb);
+           
+            background: linear-gradient(90deg, #594adb);
             background-size: 300%;
             border-radius: 30px;
             z-index: 1;
+            -webkit-transition: all 0.4s ease 0s;
+            -o-transition: all 0.4s ease 0s;
             transition: all 0.4s ease 0s;
         }
 
         button:hover {
-            animation: ani 8s linear infinite;
+            -webkit-animation: ani 8s linear infinite;
+                    animation: ani 8s linear infinite;
             border: none;
-            transform: translateY(-7px);
+            -webkit-transform: translateY(-7px);
+                -ms-transform: translateY(-7px);
+                    transform: translateY(-7px);
+        }
+
+        @-webkit-keyframes ani {
+            0% {
+                background-position: 0%;
+            }
+
+            100% {
+                background-position: 400%;
+            }
         }
 
         @keyframes ani {
@@ -76,18 +105,29 @@
             right: -5px;
             bottom: -5px;
             z-index: -1;
-            background: linear-gradient(to bottom, #e40303, #ff8c00, #ffed00, #008026, #004dff, #750787); /* 90deg */
+           
+            background: -webkit-gradient(linear, left top, right top, from(#594adb));
+           
+            background: -o-linear-gradient(left, #594adb);
+           
+            background: linear-gradient(90deg, #594adb); 
             background-size: 400%;
             border-radius: 35px;
+            -webkit-transition: 1s;
+            -o-transition: 1s;
             transition: 1s;
         }
 
         button:hover::before {
-            filter: blur(20px);
+            -webkit-filter: blur(20px);
+                    filter: blur(20px);
         }
 
         button:active {
-            background: linear-gradient(32deg, #e40303, #ff8c00, #ffed00, #008026, #004dff, #750787);
+           
+            background: -o-linear-gradient(58deg, #594adb);
+           
+            background: linear-gradient(32deg, #594adb);
         }
     }
     .grid {
@@ -107,14 +147,22 @@
             }
 
             .A {
+                display: -webkit-box;
+                display: -ms-flexbox;
                 display: flex;
-                flex-direction: column;
+                -webkit-box-orient: vertical;
+                -webkit-box-direction: normal;
+                    -ms-flex-direction: column;
+                        flex-direction: column;
                 background-color: white;
                 margin: $box-centralization;
                 border-radius: $box-radius;
-                box-shadow: $box-shadowing;
+                -webkit-box-shadow: $box-shadowing;
+                        box-shadow: $box-shadowing;
                 img {
                     margin: $icon-centralization;
+                    max-width: -webkit-fit-content;
+                    max-width: -moz-fit-content;
                     max-width: fit-content;
                     padding: 15px;
                     background-color: #f17c0e;
@@ -122,14 +170,22 @@
                 }
             }
             .B {
+                display: -webkit-box;
+                display: -ms-flexbox;
                 display: flex;
-                flex-direction: column;
+                -webkit-box-orient: vertical;
+                -webkit-box-direction: normal;
+                    -ms-flex-direction: column;
+                        flex-direction: column;
                 background-color: white;
                 margin: $box-centralization;
                 border-radius: $box-radius;
-                box-shadow: $box-shadowing;
+                -webkit-box-shadow: $box-shadowing;
+                        box-shadow: $box-shadowing;
                 img {
                     margin: $icon-centralization;
+                    max-width: -webkit-fit-content;
+                    max-width: -moz-fit-content;
                     max-width: fit-content;
                     padding: 15px;
                     background-color: #594adb;
@@ -137,14 +193,22 @@
                 }
             }
             .C {
+                display: -webkit-box;
+                display: -ms-flexbox;
                 display: flex;
-                flex-direction: column;
+                -webkit-box-orient: vertical;
+                -webkit-box-direction: normal;
+                    -ms-flex-direction: column;
+                        flex-direction: column;
                 background-color: white;
                 margin: $box-centralization;
                 border-radius: $box-radius;
-                box-shadow: $box-shadowing;
+                -webkit-box-shadow: $box-shadowing;
+                        box-shadow: $box-shadowing;
                 img {
                     margin: $icon-centralization;
+                    max-width: -webkit-fit-content;
+                    max-width: -moz-fit-content;
                     max-width: fit-content;
                     padding: 15px;
                     background-color: #0cb5c5;
@@ -152,14 +216,22 @@
                 }
             }
             .D {
+                display: -webkit-box;
+                display: -ms-flexbox;
                 display: flex;
-                flex-direction: column;
+                -webkit-box-orient: vertical;
+                -webkit-box-direction: normal;
+                    -ms-flex-direction: column;
+                        flex-direction: column;
                 background-color: white;
                 margin: $box-centralization;
                 border-radius: $box-radius;
-                box-shadow: $box-shadowing;
+                -webkit-box-shadow: $box-shadowing;
+                        box-shadow: $box-shadowing;
                 img {
                     margin: $icon-centralization;
+                    max-width: -webkit-fit-content;
+                    max-width: -moz-fit-content;
                     max-width: fit-content;
                     padding: 15px;
                     background-color: #ee3f47;
